crates/next-custom-transforms/tests/errors/server-actions/server-graph/14/input.js
'use cache'

export default function () {}
export function foo() {}
export const bar = () => {}
export const baz = 42
